# screenCaptureTeste

./: CMakeLists.txt  README.md  compile_debug.sh  main.c  run.sh
lib/ffmpeg/: CMakeLists.txt
